--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -44,6 +44,12 @@
         -webkit-text-fill-color: #60a5fa;
     }
 
+    .royalColors {
+        letter-spacing: 1px;
+        -webkit-text-stroke: 2px #d1ac47;
+        -webkit-text-fill-color: #c90000;
+    }
+
 
 
     /* Containers */
@@ -55,8 +61,18 @@
 
             /* Modal */
     
+    .modalMobile {
+        width: clamp(360px, 100%, 499px);
+        height: clamp(667px, 100%, 1200px);
+    
+    }
+    .modalLaptop {
+        width: clamp(500px, 40%, 700px);
+        height: clamp(600px, 80%, 700px);
+    }
+
     .modalSize {
-        @apply w-full h-full min-w-[360px] min-h-[667px] sm:w-2/5 sm:h-4/5 sm:min-w-[500px] sm:max-w-[700px]
+        @apply modalMobile sm:modalLaptop
     }
 
 
@@ -192,8 +208,24 @@
     .scoreNumMobile {
         font-size: clamp(1rem, 6.5vh, 5rem);
     }
+
+    .winnerMobile {
+        font-size: clamp(1.5rem, 5vh, 3rem);
+    }
+
+    .kingPigMobile {
+        height: clamp(200px, 30vh, 300px);
+    }
     
+    .hailTxtMobile {
+        font-size: clamp(1rem, 4vh, 2.5rem);
+    }
     
+    .winRstBtnMobile {
+        width: clamp(160px, 20.6vmax, 180px);
+        height: clamp(65px, 10.1vmax, 80px);
+        aspect-ratio: 1/1;
+    }
 
 
 
@@ -216,7 +248,7 @@
 
         /*  */
     .appLaptop {
-        @apply min-h-[900px] relative flex justify-center items-center 
+        @apply min-h-[900px] relative flex justify-center items-center z-[100]
     }
 
 
@@ -255,10 +287,11 @@
         aspect-ratio: 1/1;
     }
 
-    .resetBtnLaptop {
+    .inGameRstBtnLaptop {
         width: clamp(135px, 13.6vmax, 180px);
         height: clamp(60px, 6.1vmax, 80px);
         aspect-ratio: 1/1;
+        @apply relative top-0
     }
 
     .playerNames {
@@ -303,10 +336,31 @@
         -webkit-text-fill-color: #f153ff;
     }
     
+    .winnersNameLaptop {
+        font-size: clamp(4.6rem, 5.5vw, 6rem);
+    }
 
+    .winnerLaptop {
+        font-size: clamp(2.3rem, 2.75vw, 3rem);
+    }
 
+    .kingPigLaptop {
+        height: clamp(168px, 12.5vw, 220px);
+    }
 
+    .hailTxtLaptop {
+        font-size: clamp(2.3rem, 2.75vw, 3rem);
+    }
 
+    .winnerResetLaptop {
+        width: clamp(100px, 10.55vw, 187px);
+    }
+
+    .winRstBtnLaptop {
+        width: clamp(135px, 10.3vmax, 180px);
+        height: clamp(60px, 4.55vmax, 80px);
+        aspect-ratio: 1/1;
+    }
 
 
 
